# llm_sandbox

./: .gitignore  README.md  instruction-data-with-response.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
docs/llm/: attention.md  model.md
src/etl/: tokenizer.py
src/frontend/: app.py  llm_call.py
src/llm/: attention.py  config.py  extract.py  fine_tuning.py  gpt2_download.py  gpt_download.py  model.py  models.py  reasoning.py  tokenizer.py  training.py  utils.py
src/llm/gpt/: attention.py  config.py  download.py  extract.py  fine_tuning.py  model.py  training.py
src/llm/qwen3/: config.py
src/llm/reasoning/: reasoning.py
src/llm_sandbox/frontend/: app.py  config.py  llm_call.py
src/llm_sandbox/llm/: extract.py  models.py  schemas.py  tokenizer.py  utils.py
src/llm_sandbox/llm/gpt/: config.py  download.py  extract.py  fine_tuning.py  model.py  training.py
src/llm_sandbox/llm/qwen3/: config.py
src/llm_sandbox/llm/reasoning/: reasoning.py
