[project]
name = "build_llm_from_scratch"
version = "0.1.0"
description = "build_llm_from_scratch"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.15.12",
    "torch>=2.12.0",
    "tiktoken>=0.13.0",
    "numpy>=2.4.6",
]

[tool.uv]
cache-dir = "./.cache/uv"       

[tool.uv.workspace]
exclude=["**/"]

[tool.ruff]
cache-dir = "./.cache/ruff"
indent-width = 4
line-length = 120
exclude = [".venv", "data"]

[tool.ruff.lint]
select = ["ALL"]