[project]
name = "llm_sandbox"
version = "0.1.0"

requires-python = "~=3.12.0"
dependencies = [
    "reasoning_from_scratch @ git+https://github.com/rasbt/reasoning-from-scratch.git@main",
    "ruff>=0.15.12",
    "torch~=2.10.0",
    "tiktoken>=0.13.0",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "tensorflow>=2.21.0",
    "tqdm>=4.68.2",
    "psutil>=7.2.2",
    "flatbuffers>=25.12.19",
    "streamlit>=1.58.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/llm",
    "src/frontend",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
cache-dir = "./.cache/uv"       

[tool.uv.workspace]
exclude=["**/"]

[tool.ruff]
cache-dir = "./.cache/ruff"
indent-width = 4
line-length = 120
exclude = [".venv", "data"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "TD002", # Author in TODO
    "TD003", # Issue link in TODO
    "FIX002", # Line contains TODO
    "T201", # Print() statements
    "D100", # Docstrings
    "D101",
    "D102",
    "D103",
    "D107"
]
